Using the original POM file. That should work